# camellogic

./: .gitignore  README.md  camellogic.opam  dune-project
src/: camellogic.ml  camellogic.mli  common.ml  common.mli  dune  fol.ml  inttheory.ml  inttheory.mli  logic.ml  logic.mli  pretty.ml  pretty.mli
test/: dune  test_camellogic.ml  test_intlogic.ml
